DEBrowser:index page updated

--- a/NASQAR/index.html
+++ b/NASQAR/index.html
@@ -446,6 +446,44 @@
                                             </figure>
                                         </div>
                                         <hr />
+                                        <div class="card__item">
+                                            <figure class="imghvr-fold-up">
+                                                <div class="card">
+
+                                                    <div class="card__item" style="width: 100%;">
+                                                        <p class="card__item-title"><em>DEBrowser Shiny</em></p>
+                                                        <a href="/deseq2shiny" title="" style="position: unset;">
+                                                            <div class="atvImg">
+                                                                <img src="img/screenshotdebrowser.png"
+                                                                    class="img-responsive">
+
+                                                                <div class="atvImg-layer"
+                                                                    data-img="img/screenshotdebrowser.png"></div>
+
+                                                            </div>
+
+                                                        </a>
+                                                    </div>
+
+
+                                                </div>
+
+
+                                                <figcaption>
+                                                    <p><strong>DEBrowser Shiny</strong></p>
+                                                    <p class="vertical-center container6">
+                                                        <a href="/DEBrowser" class="btn btn-info btn-lg fixbtnlink"
+                                                            target="_blank">Launch</a>
+                                                    </p>
+                                                    <ul>
+                                                        <!-- <li><p>an interactive web application for differential expression analysis based on DESeq2</p></li> -->
+                                                        <!-- <li><p><strong><a href="/deseq2shiny" style="position: unset; color:lightgreen;" target="_blank">Launch</a></strong> </p></li> -->
+                                                    </ul>
+                                                </figcaption>
+
+                                            </figure>
+                                        </div>
+                                        <hr />
 
                                         <div class="card__item">
                                             <figure class="imghvr-fold-up">
@@ -927,10 +965,6 @@
                 <h4>
                     DESeq2 Shiny
                 </h4>
-
-
-
-
                 <div class="well">
 
                     <ul>
@@ -953,6 +987,35 @@
                     <div class="col-md-6">
                         <a href="/deseq2shiny" target="_blank"
                             class="button button-pill button-3d button-default button-block button-rounded button-large button-color">DESeq2
+                            Shiny</a>
+                    </div>
+                    <div class="clearBoth"></div>
+
+                </div>
+                <h4>
+                    DEBrowser Shiny
+                </h4>
+                <div class="well">
+
+                    <ul>
+                        <li>
+                            <p>An interactive web application for differential expression analysis based on DEBrowser</p>
+                        </li>
+                        <li>
+                            <p> <a href="https://bioconductor.org/packages/3.17/bioc/html/debrowser.html">DEBrowser:</a> an
+                                R package for Differential gene expression analysis </p>
+                        </li>
+                        <li>
+                            <p><strong>URLs:</strong> <a
+                                    href="https://github.com/UMMS-Biocore/debrowser" class="link2"
+                                    target="_blank"> Github Page</a></p>
+                        </li>
+                    </ul>
+
+
+                    <div class="col-md-6">
+                        <a href="/DEBrowser" target="_blank"
+                            class="button button-pill button-3d button-default button-block button-rounded button-large button-color">DEBrowser
                             Shiny</a>
                     </div>
                     <div class="clearBoth"></div>
