ATACseqQCShniy:Main html page updated

--- a/NASQAR/index.html
+++ b/NASQAR/index.html
@@ -677,6 +677,60 @@
                                 </div>
                             </div>
 
+                            <div class="col-md-12">
+                                <div class="col-md-4 card-padding">
+                                    <div class="card-title-adjust">
+                                        <h4><strong class="card-title single-color">Metagenomics</strong></h4>
+                                    </div>
+                                    <div class="colPad single-color">
+                                        <div class="card">
+                                            <div class="card__item">
+                                                <figure class="imghvr-fold-up">
+
+
+                                                    <div class="card">
+
+                                                        <div class="card__item" style="width: 100%;">
+                                                            <p class="card__item-title"><em>ATACseqQC Shiny</em></p>
+                                                            <a href="/ATACseqQCShniy" title="" style="position: unset;">
+                                                                <div class="atvImg">
+                                                                    <img src="img/ATACseqQCShniy.png" class="img-responsive">
+
+                                                                    <div class="atvImg-layer"
+                                                                        data-img="img/ATACseqQCShniy.png"></div>
+
+                                                                </div>
+
+                                                            </a>
+                                                        </div>
+
+
+                                                    </div>
+
+
+                                                    <figcaption>
+                                                        <p><strong>ATACseqQC Shiny</strong></p>
+                                                        <p class="vertical-center container6">
+                                                            <a href="/SeuratV3Wizard"
+                                                                class="btn btn-info btn-lg fixbtnlink"
+                                                                target="_blank">Launch</a>
+                                                        </p>
+                                                        <ul>
+                                                            <!-- <li><p><strong><a href="/SeuratV3Wizard" style="position: unset; color:lightgreen;" target="_blank">Launch</a></strong> </p></li> -->
+
+                                                        </ul>
+                                                    </figcaption>
+
+                                                </figure>
+                                            </div>
+
+                                            <hr />
+
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </div>
 
                             <div class="col-md-4 card-padding">
                                 <div class="card-title-adjust">
