ATACseqQCShniy:index page update

--- a/NASQAR/index.html
+++ b/NASQAR/index.html
@@ -711,7 +711,7 @@
                                                     <figcaption>
                                                         <p><strong>ATACseqQC Shiny</strong></p>
                                                         <p class="vertical-center container6">
-                                                            <a href="/SeuratV3Wizard"
+                                                            <a href="/ATACseqQCShniy"
                                                                 class="btn btn-info btn-lg fixbtnlink"
                                                                 target="_blank">Launch</a>
                                                         </p>
