fixed application link

--- a/NASQAR/index.html
+++ b/NASQAR/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+     <base target="_blank">
     <link REL="SHORTCUT ICON" HREF="favicon.ico" />
 
     <title>NASQAR: A web-based portal for High-throughput data analysis & visualization</title>
@@ -414,7 +415,7 @@
 
                                                     <div class="card__item" style="width: 100%;">
                                                         <p class="card__item-title"><em>DESeq2 Shiny</em></p>
-                                                        <a href="/deseq2shiny" title="" style="position: unset;">
+                                                        <a href="deseq2shiny" title="" style="position: unset;">
                                                             <div class="atvImg">
                                                                 <img src="img/screenshotdeseq2.png"
                                                                     class="img-responsive">
@@ -434,7 +435,7 @@
                                                 <figcaption>
                                                     <p><strong>DESeq2 Shiny</strong></p>
                                                     <p class="vertical-center container6">
-                                                        <a href="/deseq2shiny" class="btn btn-info btn-lg fixbtnlink"
+                                                        <a href="deseq2shiny" class="btn btn-info btn-lg fixbtnlink"
                                                             target="_blank">Launch</a>
                                                     </p>
                                                     <ul>
