dada2Shiny New Application

--- a/NASQAR/index.html
+++ b/NASQAR/index.html
@@ -748,7 +748,7 @@
 
                                                         <div class="card__item" style="width: 100%;">
                                                             <p class="card__item-title"><em>DADA2 Shiny</em></p>
-                                                            <a href="#" title="" style="position: unset;">
+                                                            <a href="/DADA2Shiny" title="" style="position: unset;">
                                                                 <div class="atvImg">
                                                                     <img src="img/DADA2.png" class="img-responsive">
 
@@ -767,9 +767,9 @@
                                                     <figcaption>
                                                         <p><strong>DADA2 Shiny</strong></p>
                                                         <p class="vertical-center container6">
-                                                            <a href="#"
+                                                            <a href="/DADA2Shiny"
                                                                 class="btn btn-info btn-lg fixbtnlink"
-                                                                target="_blank">Coming soon</a>
+                                                                target="_blank">Launch</a>
                                                         </p>
                                                         <ul>
                                                             <!-- <li><p><strong><a href="/SeuratV3Wizard" style="position: unset; color:lightgreen;" target="_blank">Launch</a></strong> </p></li> -->
