add link to the animalcules

--- a/NASQAR/index.html
+++ b/NASQAR/index.html
@@ -783,6 +783,50 @@
                                             <hr />
 
                                         </div>
+                                        <div class="card">
+                                            <div class="card__item">
+                                                <figure class="imghvr-fold-up">
+
+
+                                                    <div class="card">
+
+                                                        <div class="card__item" style="width: 100%;">
+                                                            <p class="card__item-title"><em>Animalcules Shiny</em></p>
+                                                            <a href="/animalcules" title="" style="position: unset;">
+                                                                <div class="atvImg">
+                                                                    <img src="img/animalcules_ui.jpg" class="img-responsive">
+
+                                                                    <div class="atvImg-layer"
+                                                                        data-img="img/animalcules_ui.jpg"></div>
+
+                                                                </div>
+
+                                                            </a>
+                                                        </div>
+
+
+                                                    </div>
+
+
+                                                    <figcaption>
+                                                        <p><strong>DADA2 Shiny</strong></p>
+                                                        <p class="vertical-center container6">
+                                                            <a href="/animalcules"
+                                                                class="btn btn-info btn-lg fixbtnlink"
+                                                                target="_blank">Launch</a>
+                                                        </p>
+                                                        <ul>
+                                                            <!-- <li><p><strong><a href="/SeuratV3Wizard" style="position: unset; color:lightgreen;" target="_blank">Launch</a></strong> </p></li> -->
+
+                                                        </ul>
+                                                    </figcaption>
+
+                                                </figure>
+                                            </div>
+
+                                            <hr />
+
+                                        </div>
 
                                     </div>
                                 </div>
